data structures CJS_assignments

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
   </head>
   <body>
-    <script src="CJS_assignments.js" type="module"></script>
+    <script src="booksData.js" type="module"></script>
+    <script src="CJS_assignments2.js" type="module"></script>
   </body>
 </html>
